force-app/main/default/objects/nDESIGN__Screen_Section__c/nDESIGN__Screen_Section__c.object-meta.xml
<CustomObject>
    <label>-D Screen Section</label>
    <nameField>
        <label>Screen Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>-D Screen Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>