force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Break_Page_Before__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Break_Page_Before__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Forces a page break before the section when printing.</description>
    <inlineHelpText>Forces a page break before the section when printing.</inlineHelpText>
    <label>Break Page Before</label>
    <type>Checkbox</type>
</CustomField>