force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Default_Editable__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Default_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if the section should be set to the editable view by default.</description>
    <label>Default Editable</label>
    <type>Checkbox</type>
</CustomField>