force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Display_Order__c</fullName>
    <inlineHelpText>Use Increments of 10 for Non Headless Sections and Increments of 1 for Headless Sections. 
Example. Loan Detail DO:10 Loan Detail Narrative DO:11</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>