force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Instructions__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Instructions__c</fullName>
    <description>Deprecated to Instructions_Text__c</description>
    <inlineHelpText>Deprecated to Instructions_Text__c</inlineHelpText>
    <label>-D Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>