force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Instructions_Text__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Instructions_Text__c</fullName>
    <description>The instructions for the section</description>
    <inlineHelpText>Instructions will be visible on HTML View only will not show on Print or PDF view. Does render for headless sections</inlineHelpText>
    <label>Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>