force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Section_Resource__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Section_Resource__c</fullName>
    <inlineHelpText>SObject is used for Widget usage expect for Approval history or when specified. MappedSobjectHierarchy is used for when you are accessing data from another object other than the Main object. Exp Get Fee Data from Loan. All other Types use MappedSobject.</inlineHelpText>
    <label>Section Resource</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SObjectScreenResource</fullName>
            </value>
            <value>
                <fullName>MappedSObjectScreenResource</fullName>
                <default>true</default>
                <label>MappedSObjectScreenResource</label>
            </value>
            <value>
                <fullName>MappedSObjectHierarchyScreenResource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>