force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Widget__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Widget__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Widget</label>
    <referenceTo>nDESIGN__Widget__c</referenceTo>
    <relationshipLabel>Screen Sections</relationshipLabel>
    <relationshipName>Screen_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>