force-app/main/default/objects/nDESIGN__Screen_Section__c/validationRules/nDESIGN__Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>nDESIGN__Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(nDESIGN__Section_Resource__c) )</errorConditionFormula>
    <errorDisplayField>nDESIGN__Section_Resource__c</errorDisplayField>
    <errorMessage>Please select a section resource.</errorMessage>
</ValidationRule>